# pancake-verifier

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  array_sum.vpr  flake.nix  flat.vpr  getting-started.md  pancake.sh  todo
pancake-language-server/: Cargo.toml
pancake-language-server/src/: main.rs
pancake2viper/: Cargo.toml  build.rs
pancake2viper/src/: app.rs  cli.rs  lib.rs  main.rs  mangle_ir.rs  pancake_ast.rs  parser.rs  prelude.vpr  shape.pest  shape.rs  shape_parser.rs  tests.rs  traits.rs  translation.rs  utils.rs  viper_ast.rs
pancake2viper/src/annotation/: annot.pest  ast.rs  mod.rs  parser.rs  tests.rs
pancake2viper/src/ir/: const_eval.rs  display.rs  expr_to_viper.rs  expression.rs  mangle.rs  mod.rs  shared.rs  statement.rs  stmt_to_viper.rs  to_shape.rs  toplevel.rs  types.rs  utils.rs
pancake2viper/src/ir_to_viper/: expression.rs  heap.rs  mod.rs  statement.rs  toplevel.rs  utils.rs
pancake2viper/src/pancake/: expression.rs  mod.rs  parser.rs  shape.pest  shape.rs  statement.rs  to_shape.rs  top.rs  toplevel.rs  utils.rs
pancake2viper/src/pancake_to_ir/: expression.rs  mod.rs  statement.rs  toplevel.rs  (+1 more)
pancake2viper/tests/: abstract_method.pnk  acc_predicate.pnk  access_slice.pnk  alen.pnk  alignment.pnk  annot_missing_keywords.pnk  arg_copy_semantics.pnk  arg_copy_semantics_struct.pnk  array_sum.pnk  auto_arg.pnk  auto_return_struct.pnk  break_continue.pnk  calls.pnk  const_eval.pnk  field.pnk  fix_triggers.pnk  function_result.pnk  if.pnk  int_bounds.pnk  issue_42.pnk  issue_54.pnk  ld8.pnk  lds.pnk  mangling_triggers.pnk  multiline_annotation.pnk  nested_struct_access.pnk  nested_struct_predicate.pnk  nested_while.pnk  nested_while2.pnk  old.pnk  predicate.pnk  predicate_heap.pnk  predicate_in_precondition.pnk  predicate_unfolding_in.pnk  refute.pnk  return_struct.pnk  shape_type.pnk  shared.pnk  shared_model.pnk  st8.pnk  (+4 more)
(+113 files in other folders)
