[package]
name = "pancake2viper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.18", features = ["derive"] }
clap-stdin = "0.5.1"
lazy_static = "1.5.0"
pest = "2.7.15"
pest_derive = "2.7.15"
regex = "1.10.6"
sexpr_parser = "0.3.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.40"
viper = { path = "../prusti/viper" }
